# citizen-dashboard

./: .env  .gitignore  Civic Dashboard.drawio  LICENSE  README-ServerSide.md  README.md  agenda_items_table_layout.json  docker-compose.yml  embedding_generator.py  environment.yml  main.ipynb  main.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tailwind.config.ts  visualize_embeddings.py
.github/workflows/: auto-create-pr.yml  auto-create-py.yml  deploy-notebook.yml  docker-publish.yml  main.yml  push-images.yml  reset-env.yaml  reset-env.yml
DataAggregator/: README.md
DataAggregator/data-aggregator/: pyproject.toml
DataAggregator/data-aggregator/data_aggregator/: agendaItemFetcher.py  app.py  local-env-file
ElasticSearch/: .gitignore  readme.md
ElasticSearch/ElasticSearch-Server/: local-env-file  package-lock.json  package.json
ElasticSearch/ElasticSearch-Server/elasticsearch-container/: compose.yml  local-env-file  readme.md
ElasticSearch/ElasticSearch-Server/server/: agendaItemProcessor.js  consumerServer.js  searchServer.js
ElasticSearch/elasticsearch-client/: local-env-file  next.config.mjs  package-lock.json  package.json
ElasticSearch/elasticsearch-client/src/: app-types.d.ts
citizen-dashboard/: Chart.yaml  values.yaml
citizen-dashboard-backend/: Dockerfile  package-lock.json  package.json
citizen-dashboard-backend/backend/: Dockerfile  populate_db.py  pyproject.toml  search_api.py  temp.py
citizen-dashboard-backend/data-fetcher/: Dockerfile  fetch_voting_records.py  fetcher.py  hybrid.py  main.py  pyproject.toml
citizen-dashboard-backend/data-fetcher/deployment/: deployment.yaml  service.yaml
citizen-dashboard-backend/data-fetcher/infra/: producer.py
citizen-dashboard-backend/data-fetcher/src/: processor.py
citizen-dashboard-backend/data-store/infra/: consumer.py  env.py
citizen-dashboard-backend/db/: Dockerfile
citizen-dashboard-backend/scripts/: __init__.py  data_fetcher.py  fetch_voting_records.py  visualizer.py
citizen-dashboard-backend/scripts/scraper/: hybrid.py  tabular.py  unstructured.py
citizen-dashboard-backend/src/: app.js  config.js
citizen-dashboard-backend/src/controllers/: userController.js
citizen-dashboard-backend/src/models/: user.js
citizen-dashboard-backend/src/routes/: index.js
citizen-dashboard-frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
citizen-dashboard-frontend/src/components/: DataDisplay.svelte  DataRow.svelte  SearchBar.svelte
citizen-dashboard-frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte
citizen-dashboard-infra/: namespace.yaml
citizen-dashboard-infra/kafka/: kafka.yaml  zookeeper.yaml
citizen-dashboard/scripts/: deploy_local.py
citizen-dashboard/templates/: _helpers.tpl  app-configmap.yaml  secrets.yaml
citizen-dashboard/templates/config/: secret.yaml
citizen-dashboard/templates/data-fetcher/: deployment.yaml  service.yaml
citizen-dashboard/templates/data-store/: cronjob.yaml  deployment.yaml  service.yaml
citizen-dashboard/templates/elasticsearch/: configmap.yaml  deployment.yaml  service.yaml
civic-dashboard/: Chart.yaml  values.yaml
civic-dashboard/scripts/: deploy_local.py  init-database.sql
civic-dashboard/templates/: _helpers.tpl  app-configmap.yaml  secrets.yaml
ctto-rag-demo/: .env  pyproject.toml
ctto-rag-demo/ctto_rag_demo/: agenda_item.py  data_prep.py  rag.py  scraper.py  server.py
ctto-rag-demo/ctto_rag_demo/vectordb/: docker-compose.yml  milvus_vector_store.py  readme.md
ctto-rag-demo/data/: 2024.EC14.1.md  2024.EC14.1.txt
ctto-rag-demo/tests/: markdown_parser.py
data-aggregator/: pyproject.toml
data-aggregator/data_aggregator/: app.py  council_dictionary.py
data-aggregator/data_aggregator/gen_ai/: summarizer.py
data-aggregator/data_aggregator/kafka/: kafka_consumer.py
deployment/: deploy_local.py  deploy_local.sh  teardown_local.py  teardown_local.sh  utils.py
helm/citizen-dashboard/: Chart.yaml  values.yaml
scripts/: cleanup_local.py  data_fetcher_job.py  deploy_local.py  init-database.sql
services/: __init__.py
services/data-fetcher/: Dockerfile  main.py  pyproject.toml
services/data-fetcher/app/: data_fetcher.py  main.py
services/data-fetcher/deployment/: deploy.py  deployment.yaml
services/data-fetcher/infra/: producer.py
services/data-fetcher/src/: fetcher.py
services/data-store/: Dockerfile  main.py  pyproject.toml
services/data-store/app/: main.py
services/data-store/deployment/: deploy.py  deployment.yaml  service.yaml
services/data-store/infra/: consumer.py  db.py  sql_db.py
services/data_fetcher/: Dockerfile  main.py
services/data_store/: main.py  pyproject.toml
services/search-api/: pyproject.toml
services/sync-elastic/: pyproject.toml
services/sync-elastic/app/: main.py
src/: __init__.py  app-types.d.ts  clusterer.py  data_fetcher.py  data_preprocessor.py  dimensionality_reducer.py  embedding_generator.py  topic_modeler.py  visualizer.py
src/app/: layout.tsx  page.tsx  setup-proxy.js
src/scraper/: main.py
src/services/: SearchResultParser.ts  search-client.js  search-elastic.ts  search-opensearch.ts  search.js
(+109 files in other folders)
