[tool.poetry]
name = "citizen-dashboard"
version = "0.1.0"
description = ""
authors = ["yeralash <mishaneiman@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^30.1.0"
docker = "^7.1.0"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
