[tool.poetry]
name = "civic-dashboard"
version = "0.1.0"
description = ""
authors = ["yeralash <mishaneiman@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyhelm3 = "^0.4.0"
kubernetes-asyncio = "^31.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
