[tool.poetry]
name = "data-store"
version = "0.1.0"
description = ""
authors = ["Michael Korabelnikov <korabel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
