[tool.poetry]
name = "data-store"
version = "0.1.0"
description = ""
authors = ["Michael Korabelnikov <korabel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.5.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.30.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
